# vpn-toggle

./: .gitignore  CHANGELOG.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  create-icons.py  create-icons.sh  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Settings.tsx  VpnList.tsx
